--- a/ESDelphi.dproj
+++ b/ESDelphi.dproj
@@ -102,6 +102,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="EndPointClient.pas"/>
+        <DCCReference Include="SyslogMessage.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
